dashboard total count, message forward overlap, changepassword border issues fixed

--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -1,8 +1,8 @@
 page-dashboard {
   .custom-tooltip {
-  	position:absolute;
+  	position:fixed;
 	left: 20px;
-    top: 50px;
+    top: 107px;
     background: #fff;
     padding: 10px;
     text-align: left;
