--- a/src/pages/messagedetail/messagedetail.scss
+++ b/src/pages/messagedetail/messagedetail.scss
@@ -123,6 +123,7 @@ page-messagedetail {
 			position: absolute;
 			top: 80px;
 			right: 20px;
+			z-index: 10;
 			border: 0px solid lightgray;
 			background-color: white;
 			button{
